# logos-land

./: Cargo.toml  Makefile  README.md
examples/: Cargo.toml
land_registry_core/: Cargo.toml
land_registry_core/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
