[package]
name = "land-registry-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"

[[bin]]
name = "land_registry_cli"
path = "src/bin/land_registry_cli.rs"

[dependencies]
lez-framework = { git = "https://github.com/jimmy-claw/lez-framework.git" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "be4f6c0c78be179b07ba95e272ba00ba8bb62565" }
lez-cli = { git = "https://github.com/jimmy-claw/lez-framework.git" }
land_registry_core = { path = "../land_registry_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
