[package]
name = "land-registry-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"

[[bin]]
name = "land_registry_cli"
path = "src/bin/land_registry_cli.rs"

[dependencies]
# SPEL framework (v0.2.0+): lez-* renamed to spel-*
spel-framework = { git = "https://github.com/logos-co/spel.git" }
spel-cli = { git = "https://github.com/logos-co/spel.git" }
# logos-execution-zone (formerly lssa) — use main branch for latest LEZ features
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", branch = "main" }
land_registry_core = { path = "../land_registry_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
