[package]
name = "land-registry-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "land_registry"
path = "src/bin/land_registry.rs"

[dependencies]
lez-framework = { git = "https://github.com/jimmy-claw/lez-framework.git" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "be4f6c0c78be179b07ba95e272ba00ba8bb62565" }
risc0-zkvm = { version = "=3.0.5", default-features = false }
land_registry_core = { path = "../../land_registry_core" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
