[package]
name = "land-registry-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "land_registry"
path = "src/bin/land_registry.rs"

[dependencies]
# SPEL framework (v0.2.0+): lez-* renamed to spel-*
spel-framework = { git = "https://github.com/logos-co/spel.git" }
# logos-execution-zone (formerly lssa) — use main branch for latest features
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", branch = "main" }
risc0-zkvm = { version = "=3.0.5", default-features = false }
land_registry_core = { path = "../../land_registry_core" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
